// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewListItem > renders default state 1`] = `
<div>
  <div
    aria-label="Open review: Sample Review"
    class="_root_c3fb80 rounded-card r-card-lg p-[var(--space-4)] border border-card-hairline/60 bg-card/60 text-card-foreground shadow-neo-soft group relative flex flex-col gap-[var(--space-3)] transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-0 cursor-pointer hover:bg-card/75 active:bg-card/85 focus-visible:bg-card/80"
    data-depth="base"
    data-scope="reviews"
    role="button"
    tabindex="0"
  >
    <div
      class="flex items-start justify-between gap-[var(--space-3)]"
    >
      <div
        class="flex flex-col gap-[var(--space-1)]"
      >
        <span
          class="text-body font-medium text-card-foreground"
        >
          Sample Review
        </span>
        <div
          class="flex flex-wrap items-center gap-x-[var(--space-2)] gap-y-[var(--space-1)] text-label text-muted-foreground"
        >
          <span>
            Nov 14, 2023
          </span>
          <span>
            Lux vs Ahri
          </span>
        </div>
      </div>
      <span
        aria-label="Rating 9 out of 10"
        class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-2-foreground ring-1 ring-[theme('colors.interaction.info.surfaceActive')] bg-accent-2 hover:ring-[theme('colors.interaction.info.surfaceHover')] focus-visible:ring-[theme('colors.interaction.info.surfaceHover')] active:ring-[theme('colors.interaction.info.surfaceActive')]"
      >
        9
        /10
      </span>
    </div>
    <div
      class="flex flex-wrap items-center gap-[var(--space-2)] text-label text-muted-foreground"
    >
      <span
        aria-hidden="true"
        class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
      />
      <span
        class="font-medium text-card-foreground"
      >
        Win
      </span>
      <span
        class="_neu_0e7b1b _root_a3326d relative inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap font-medium tracking-[0.02em] border py-[var(--space-1)] text-label leading-none [&_svg]:size-[var(--icon-size-xs)] border-card-hairline data-[disabled=true]:opacity-disabled px-[var(--space-1)]"
      >
        MID
      </span>
    </div>
    <p
      class="line-clamp-3 text-ui text-muted-foreground"
    >
      Quick note
    </p>
  </div>
</div>
`;

exports[`ReviewListItem > renders disabled state 1`] = `
<div>
  <div
    aria-disabled="true"
    aria-label="Open review: Sample Review"
    class="_root_c3fb80 rounded-card r-card-lg p-[var(--space-4)] border border-card-hairline/60 bg-card/60 text-card-foreground shadow-neo-soft group relative flex flex-col gap-[var(--space-3)] transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-0 opacity-disabled"
    data-depth="base"
    data-disabled="true"
    data-scope="reviews"
    role="button"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between gap-[var(--space-3)]"
    >
      <div
        class="flex flex-col gap-[var(--space-1)]"
      >
        <span
          class="text-body font-medium text-card-foreground"
        >
          Sample Review
        </span>
        <div
          class="flex flex-wrap items-center gap-x-[var(--space-2)] gap-y-[var(--space-1)] text-label text-muted-foreground"
        >
          <span>
            Nov 14, 2023
          </span>
          <span>
            Lux vs Ahri
          </span>
        </div>
      </div>
      <span
        aria-label="Rating 9 out of 10"
        class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-2-foreground ring-1 ring-[theme('colors.interaction.info.surfaceActive')] bg-accent-2 hover:ring-[theme('colors.interaction.info.surfaceHover')] focus-visible:ring-[theme('colors.interaction.info.surfaceHover')] active:ring-[theme('colors.interaction.info.surfaceActive')]"
      >
        9
        /10
      </span>
    </div>
    <div
      class="flex flex-wrap items-center gap-[var(--space-2)] text-label text-muted-foreground"
    >
      <span
        aria-hidden="true"
        class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
      />
      <span
        class="font-medium text-card-foreground"
      >
        Win
      </span>
      <span
        class="_neu_0e7b1b _root_a3326d relative inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap font-medium tracking-[0.02em] border py-[var(--space-1)] text-label leading-none [&_svg]:size-[var(--icon-size-xs)] border-card-hairline data-[disabled=true]:opacity-disabled px-[var(--space-1)]"
      >
        MID
      </span>
    </div>
    <p
      class="line-clamp-3 text-ui text-muted-foreground"
    >
      Quick note
    </p>
  </div>
</div>
`;

exports[`ReviewListItem > renders loading state 1`] = `
<div>
  <div
    class="flex flex-col gap-[var(--space-3)] rounded-card r-card-lg border border-border/35 bg-card/70 p-[var(--space-4)] motion-safe:animate-pulse motion-reduce:animate-none"
    data-scope="reviews"
  >
    <div
      class="h-[var(--space-3)] rounded-card bg-muted w-3/5 mb-[var(--space-3)]"
    />
    <div
      class="h-[var(--space-3)] rounded-card bg-muted w-2/5"
    />
  </div>
</div>
`;

exports[`ReviewListItem > renders selected state 1`] = `
<div>
  <div
    aria-current="true"
    aria-label="Open review: Sample Review"
    class="_root_c3fb80 rounded-card r-card-lg p-[var(--space-4)] border border-card-hairline/60 text-card-foreground shadow-neo hover:shadow-neo-strong focus-visible:shadow-neo-strong focus-within:shadow-neo-strong group relative flex flex-col gap-[var(--space-3)] transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-0 cursor-pointer hover:bg-card/75 active:bg-card/85 focus-visible:bg-card/80 bg-[theme('colors.interaction.accent.tintActive')] ring-2 ring-[theme('colors.interaction.accent.surfaceActive')]"
    data-depth="raised"
    data-scope="reviews"
    data-selected="true"
    role="button"
    tabindex="0"
  >
    <div
      class="flex items-start justify-between gap-[var(--space-3)]"
    >
      <div
        class="flex flex-col gap-[var(--space-1)]"
      >
        <span
          class="text-body font-medium text-card-foreground"
        >
          Sample Review
        </span>
        <div
          class="flex flex-wrap items-center gap-x-[var(--space-2)] gap-y-[var(--space-1)] text-label text-muted-foreground"
        >
          <span>
            Nov 14, 2023
          </span>
          <span>
            Lux vs Ahri
          </span>
        </div>
      </div>
      <span
        aria-label="Rating 9 out of 10"
        class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-2-foreground ring-1 ring-[theme('colors.interaction.info.surfaceActive')] bg-accent-2 hover:ring-[theme('colors.interaction.info.surfaceHover')] focus-visible:ring-[theme('colors.interaction.info.surfaceHover')] active:ring-[theme('colors.interaction.info.surfaceActive')]"
      >
        9
        /10
      </span>
    </div>
    <div
      class="flex flex-wrap items-center gap-[var(--space-2)] text-label text-muted-foreground"
    >
      <span
        aria-hidden="true"
        class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
      />
      <span
        class="font-medium text-card-foreground"
      >
        Win
      </span>
      <span
        class="_neu_0e7b1b _root_a3326d relative inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap font-medium tracking-[0.02em] border py-[var(--space-1)] text-label leading-none [&_svg]:size-[var(--icon-size-xs)] border-card-hairline data-[disabled=true]:opacity-disabled px-[var(--space-1)]"
      >
        MID
      </span>
    </div>
    <p
      class="line-clamp-3 text-ui text-muted-foreground"
    >
      Quick note
    </p>
  </div>
</div>
`;

exports[`ReviewListItem > renders untitled state 1`] = `
<div>
  <div
    aria-label="Open review: Untitled Review"
    class="_root_c3fb80 rounded-card r-card-lg p-[var(--space-4)] border border-card-hairline/60 bg-card/60 text-card-foreground shadow-neo-soft group relative flex flex-col gap-[var(--space-3)] transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-0 cursor-pointer hover:bg-card/75 active:bg-card/85 focus-visible:bg-card/80"
    data-depth="base"
    data-scope="reviews"
    role="button"
    tabindex="0"
  >
    <div
      class="flex items-start justify-between gap-[var(--space-3)]"
    >
      <div
        class="flex flex-col gap-[var(--space-1)]"
      >
        <span
          aria-label="Untitled Review"
          class="text-body font-medium text-muted-foreground/80"
        >
          Untitled Review
        </span>
        <div
          class="flex flex-wrap items-center gap-x-[var(--space-2)] gap-y-[var(--space-1)] text-label text-muted-foreground"
        >
          <span>
            Nov 14, 2023
          </span>
          <span>
            Lux vs Ahri
          </span>
        </div>
      </div>
      <span
        aria-label="Rating 9 out of 10"
        class="px-[var(--space-2)] py-[var(--space-1)] rounded-full text-ui leading-none font-medium text-accent-2-foreground ring-1 ring-[theme('colors.interaction.info.surfaceActive')] bg-accent-2 hover:ring-[theme('colors.interaction.info.surfaceHover')] focus-visible:ring-[theme('colors.interaction.info.surfaceHover')] active:ring-[theme('colors.interaction.info.surfaceActive')]"
      >
        9
        /10
      </span>
    </div>
    <div
      class="flex flex-wrap items-center gap-[var(--space-2)] text-label text-muted-foreground"
    >
      <span
        aria-hidden="true"
        class="h-[var(--space-2)] w-[var(--space-2)] rounded-full ring-2 motion-safe:animate-[blink_1s_steps(2)_infinite] motion-reduce:animate-none bg-success ring-success"
      />
      <span
        class="font-medium text-card-foreground"
      >
        Win
      </span>
      <span
        class="_neu_0e7b1b _root_a3326d relative inline-flex max-w-full items-center gap-[var(--space-2)] whitespace-nowrap font-medium tracking-[0.02em] border py-[var(--space-1)] text-label leading-none [&_svg]:size-[var(--icon-size-xs)] border-card-hairline data-[disabled=true]:opacity-disabled px-[var(--space-1)]"
      >
        MID
      </span>
    </div>
    <p
      class="line-clamp-3 text-ui text-muted-foreground"
    >
      Quick note
    </p>
  </div>
</div>
`;
